package quartaBI.Ristorante;

public interface Cucinabile {
    void cucina();
}
