package quartaBI.Ristorante;

public class Dolce extends Piatto {

    public Dolce(String nome, String ricetta) {
        super(nome, ricetta);
    }

    @Override
    public void cucina() {

    }
}
