package quartaBI.Ristorante;

public class Menu {
    private Piatto[] piatti;
}
