package quartaBI.Ristorante;

public class Ristorante {
    private String nome;
    private Menu menu;

    public String getNome(){
        return this.nome;
    }

    public void setNome(String nome){
        this.nome = nome;
    }

    public Piatto richiediPiatto(Piatto piatto){
            return null;
    }

}
